/*
    Copyright 2023 All Rigo Chain Developers

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
*/

syntax = "proto3";
package types;
option go_package = "github.com/kysee/rigo/ctrlers/types";

message TrxProto {
  uint32 version = 1;
  int64 time = 2;
  uint64 nonce = 3;
  bytes from = 4;
  bytes to = 5;
  bytes _amount = 6;
  bytes _gas = 7;
  int32 type = 8;
  bytes _payload = 9;
  bytes sig = 10;
}

message TrxPayloadStakingProto {}

message TrxPayloadUnstakingProto {
  bytes tx_hash = 1;
}

message TrxPayloadExecContractProto {
  bytes _code = 1;
}

message TrxPayloadProposalProto {
  string message = 1;
  int64 start_voting_height = 2;
  int64 voting_blocks = 3;
  int32 opt_type = 4;
  repeated bytes options = 5;
}

message TrxPayloadVotingProto {
  bytes tx_hash = 1;
  int32 choice = 2;
}

message TrxPayloadContractProto {
  bytes data = 1;
}